// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div>
  <div
    class="sc-AykKJ bjPPvP"
  >
    <button
      class="sc-AykKG tlOLT"
      size="2"
      type="button"
    />
    <ul
      class="sc-AykKK hnCQVG"
      data-testid="dropdown"
    />
  </div>
</div>
`;

exports[`renders dropdown 1`] = `
<div>
  <div
    class="sc-AykKJ bjPPvP"
  >
    <button
      class="sc-AykKG tlOLT"
      size="2"
      type="button"
    >
      <p
        class="sc-AykKC jujpib sc-AykKI hVujcK"
      >
        Example
      </p>
    </button>
    <ul
      class="sc-AykKK kKpbLI"
      data-testid="dropdown"
    >
      <a
        class="sc-AykKF dZqsoD"
        href="http://www.google.pl"
        size="2"
        target="_blank"
      >
        <test-file-stub
          classname="sc-AykKH gYGJrf"
        />
        <p
          class="sc-AykKC jujpib sc-AykKI hVujcK"
        >
          I open Google in new tab
        </p>
      </a>
    </ul>
  </div>
</div>
`;
